kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hugomathieux-ingress
spec:
  rules:
  - host: snake.hugomathieux.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-snake-service
            port:
              number: 80
  - host: hugomathieux.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-service
            port:
              number: 80
